--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Hai Jeje.</title>
+<title>Hai, Riraa!</title>
 
 <style>
 body {
@@ -83,7 +83,7 @@ body {
 
 <div class="spotify" id="spotify">
   <iframe style="border-radius:12px"
-    src="https://open.spotify.com/embed/track/2UgCs0i0rNHUH2jKE5NZHE"
+    src="https://open.spotify.com/embed/track/1U1qumuS2O5Qttw8G7UXOZ"
     width="100%" height="152"
     frameborder="0"
     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
@@ -92,7 +92,7 @@ body {
 
 <script>
 
-const name = "Zaskiya";
+const name = "Rira";
 
 const heartTemplate = `
           @@@@@@@@@@@                @@@@@@@@@@@
@@ -133,7 +133,7 @@ function romanticize(template, name) {
 const fakeCommand = `
 > initializing...
 > scanning data...
-> target found: Hai, Je!
+> target found: Hai, Rira!
 > injecting...
 > status: SUCCESS
 
@@ -142,22 +142,26 @@ const fakeCommand = `
 const heart = romanticize(heartTemplate, name);
 
 const message = `
-Untuk perempuanku, ${name}.
-in a world full of harsh bright lights, 
-you are my warm soft light.
-I Pray For You, Happy Valentine's Day!
+Untuk Perempuanku, Humaira Rizkia Rira Febriani.
 
-if i could give you one thing in life,
-i would give you the ability to see
-yourself throught my eyes.
-because only then you would realize
-how special you are.
- 
-just remember this,
-you're never alone, not while i'm still breathing.
+Sejak ada kamu, hidupku terasa lebih tenang dan bahagia. 
+Kamu bukan cuma orang yang aku sayang,
+tapi juga tempat aku cerita dan bersandar.
+Hal-hal sederhana seperti ngobrol, ketawa bareng,
+atau cuma saling diem sudah cukup bikin aku merasa nyaman.
+Bersama kamu,
+aku merasa jadi diri sendiri
+dan nggak pernah merasa sendirian.
 
-This song is for you...
-Sempurna - Andra & The Backbone
+Thank you for being my support system,
+my strength, and my comfort. 
+Saat aku capek atau ragu sama diri sendiri,
+kamu yang selalu nguatkan dan percaya sama aku. 
+
+You make me feel loved in the simplest ways. 
+Aku nggak tahu masa depan akan seperti apa, 
+tapi selama ada kamu di sampingku, 
+semuanya terasa lebih mudah dijalani. 💗
 `;
 
 const fullText = fakeCommand + heart + "\n" + message;
@@ -181,5 +185,3 @@ typeWriter();
 
 </body>
 </html>
-
-
